base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dnapp
  name: dnapp
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dnapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dnapp
        deployment: dnapp
    spec:
      containers:
      - image: dotnet-7.0
        imagePullPolicy: Always
        name: dnapp
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      imagePullSecrets:
        - name: quay
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
