base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: movielisting
  labels:
    app: movielisting
    app.kubernetes.io/component: movielisting
    app.kubernetes.io/instance: movielisting
    app.kubernetes.io/name: movielisting
    app.kubernetes.io/part-of: dotnetcore-movielisting
spec:
  to:
    kind: Service
    name: movielisting
    weight: 100
  port:
    targetPort: 5000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
